# cs225FinalProject

./: CMakeCache.txt  CMakeLists.txt  Data Debrief  Github Instructions  Makefile  README.md  cmake_install.cmake  report.md
docs/: Project Proposal.txt  Team Contract.txt
entry/: format.txt  graph.txt  main.cpp
lib/: CMakeLists.txt  large_twitch.csv  test_edges.csv  test_features.csv
src/: BTree.cpp  BTree.h  CMakeLists.txt  Data.cpp  Data.h  Graph.cpp  Graph.h  ReadCSV.cpp  ReadCSV.h
tests/: tests.cpp
